--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.login=squ_a414b2fca69d414d2b0ecb84bfb81438d8c60cb1
 #sonar.eslint.eslintconfigpath=/eslintrc.json
 
 # path to srouce directories
-sonar.sources=.
+sonar.sources=/
 # sonar.tests=app/test/integration/api/
 
 # excludes
