--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectKey=hadiya_sonar_setup
 sonar.projectName=hadiya-products-backend
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
-sonar.host.url=http://54.144.211.46:9000/
+sonar.host.url=http://54.144.211.46:9000
 sonar.login=squ_a414b2fca69d414d2b0ecb84bfb81438d8c60cb1
 
 # sonar.language=js
