--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-DB_CONNECTION_STRING=mysql://admin:Password@database-1.c5ae2oaqu9iu.us-east-1.rds.amazonaws.com:3306/hadiyadb_mysql
+DB_CONNECTION_STRING=mysql://admin:Database123@hadiya-db-poc-1.cjuk26yw2ct8.ap-south-1.rds.amazonaws.com:3306/product
