--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -4,6 +4,7 @@ metadata:
   name: backend
   labels:
     app: backend
+  namespace: product
 spec:
   replicas: 1
   selector:
@@ -46,6 +47,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: backend-service
+  namespace: product
 spec:
   type: ClusterIP
   selector:
