--- a/k8s/deployment.yml
+++ b/k8s/deployment.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: swapnil2026/hbackend:latest 
+        image: swapnil2026/hbackend:18 
         ports:
         - containerPort: 3000
         env:
